src/tests/fixtures/extend_interface/redefineFiledThatExistsOnImplementingInterface.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlInterface */
interface IPerson {
  name: string;
  /** @gqlField */
  hello: string;
}

/** @gqlField */
export function greeting(person: IPerson): string {
  return `Hello ${person.name}!`;
}

/**
 * @gqlInterface
 * @gqlImplements IPerson
 */
interface User {
  __typename: "User";
  name: string;
  /** @gqlField */
  hello: string;

  /** @gqlField */
  greeting(): string;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_interface/redefineFiledThatExistsOnImplementingInterface.invalid.ts:2:1 - error: Cannot extend non-object type "IPerson".

  2 interface IPerson {
    ~~~~~~~~~~~~~~~~~~~
  3   name: string;
    ~~~~~~~~~~~~~~~
... 
  5   hello: string;
    ~~~~~~~~~~~~~~~~
  6 }
    ~

  src/tests/fixtures/extend_interface/redefineFiledThatExistsOnImplementingInterface.invalid.ts:9:1
     9 export function greeting(person: IPerson): string {
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    10   return `Hello ${person.name}!`;
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    11 }
       ~
    Related location
